# VUT_Projekt_Piskvorky

./: .gitignore  README.md
Data/: Leaderboard.json
Linux_MacOS/: hxh.c  main  main.c  mylib.h
Linux_MacOS/include/: checker.h  hxai.h  hxh.h  leaderboard.h  mylib.h
Linux_MacOS/lib/: checker.c  hxai.c  hxh.c  leaderboard.c  mylib.c
Linux_MacOS/src/: main.c
Windows/: CMakeLists.txt  info.txt
Windows/include/: leaderboard.h
Windows/lib/: checker.c  hxh.c  leaderboard.c  mylib.c
Windows/piskvorky/: CMakeLists.txt
Windows/piskvorky/include/: cJSON.h  leaderboard.h
Windows/piskvorky/lib/: cJSON.cpp  checker.cpp  hxh.cpp  leaderboard.cpp  mylib.cpp
Windows/piskvorky/src/: main.cpp  main.cpp~  main.cpz~
Windows/src/: main.c
